# Road-Traffic-management-system-python

./: create.py  db_config.py  db_connector.py  delete.py  main.py  pyproject.toml  read.py  readme.md  set_comparision.py  set_membership.py  set_operations.py  subqueries.py  update.py
_depreciated/: aggregate_functions.py  olap_functions.py
